[package]
name = "webp-convert"
version = "0.1.0"
description = "WebP Convert — local image converter"
authors = ["Paolo Furesi"]
edition = "2021"

[lib]
name = "webp_convert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
